# backgroundUpdate

./: .gitignore  CMakeLists.txt  README.md  project(plateperspectivecorrectionplugin.txt
cmake/: FindNVDS.cmake  FindTENSORRT.cmake
include/: BackgroundUpdateImpl.hpp  median_gpu.hpp  saveSurfaceToDisk.hpp  utils.hpp
include/src/: main.cpp  median_gpu.cu
src/: BackgroundUpdateImpl.cpp  median_gpu.cu  saveSurfaceToDisk.cpp  utils.cpp
